--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/layout_padding_bottom"
+        android:paddingLeft="@dimen/layout_padding_left"
+        android:paddingRight="@dimen/layout_padding_right"
+        android:paddingTop="@dimen/layout_padding_top"
         tools:context=".MainActivity">
 
         <TextView
             android:id="@+id/TitleMainTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_buttom"
-            android:textSize="@dimen/activity_text_normal"
+            android:layout_marginBottom="@dimen/activity_margin_bottom"
+            android:textSize="@dimen/activity_large"
             android:text="@string/TitleMain"
             android:textAllCaps="true" />
 
@@ -26,7 +26,7 @@
             android:id="@+id/DescriptionMainTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_buttom"
+            android:layout_marginBottom="@dimen/activity_margin_bottom"
             android:textSize="@dimen/activity_text_description"
             android:text="@string/DescriptionMain" />
 
