--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/Result_quiz_image_view"
-        android:src="@drawable/red"
-        android:layout_width="250dp"
-        android:layout_height="180dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/layout_padding_bottom"
+        android:paddingLeft="@dimen/layout_padding_left"
+        android:paddingRight="@dimen/layout_padding_right"
+        android:paddingTop="@dimen/layout_padding_top" >
 
-    <TextView
-        android:id="@+id/ResultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_margin_buttom"
-        android:textSize="@dimen/activity_text_normal"
-        android:text="descrizione risultato" />
+        <ImageView
+            android:id="@+id/Result_quiz_image_view"
+            android:src="@drawable/red"
+            android:layout_width="250dp"
+            android:layout_height="180dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop" />
 
+        <TextView
+            android:id="@+id/ResultMessageTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin_top"
+            android:layout_marginBottom="@dimen/activity_margin_bottom"
+            android:textStyle="bold"
+            android:textSize="@dimen/activity_large" />
+        <TextView
+            android:id="@+id/ResultTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin_top"
+            android:textSize="@dimen/activity_text_normal"
+            android:text="descrizione risultato" />
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
