--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,21 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="activity_margin_buttom">16dp</dimen>
+    <dimen name="layout_padding_left">6dp</dimen>
+    <dimen name="layout_padding_right">6dp</dimen>
+    <dimen name="layout_padding_bottom">12dp</dimen>
+    <dimen name="layout_padding_top">12dp</dimen>
+
+    <dimen name="activity_margin_right">16dp</dimen>
+    <dimen name="activity_margin_left">16dp</dimen>
+    <dimen name="activity_margin_bottom">8dp</dimen>
     <dimen name="activity_margin_top">16dp</dimen>
-    <dimen name="activity_padding_left">6dp</dimen>
-    <dimen name="activity_question">12sp</dimen>
-    <dimen name="activity_text_normal">16sp</dimen>
+
+
+    <dimen name="radio_margin_bottom">4dp</dimen>
+    <dimen name="activity_padding_left">2dp</dimen>
+
+    <dimen name="activity_question">16sp</dimen>
+    <dimen name="activity_large">18sp</dimen>
+    <dimen name="activity_text_normal">12sp</dimen>
     <dimen name="activity_text_description">14sp</dimen>
 </resources>
